garde/tests/ui/compile-fail/pattern_invalid_regex.stderr
error: invalid regex: regex parse error:
           (
           ^
       error: unclosed group
 --> tests/ui/compile-fail/pattern_invalid_regex.rs
  |
  |     #[garde(pattern("("))]
  |                     ^^^
